# Robot-Spatial-Understanding

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  SKILL.md  THIRD_PARTY_DATASETS.md  pyproject.toml
agents/: openai.yaml
benchmarks/: gymnasium_fetch_reach_smoke.py  maniskill_manipulation_corruption.py  maniskill_manipulation_cuda_smoke.py  maniskill_manipulation_evidence.py  maniskill_pickcube_corruption.py  maniskill_pickcube_cuda_smoke.py  maniskill_pickcube_evidence.py  maniskill_pickcube_negatives.py  release-matrix.yaml
containers/: core.Dockerfile  maniskill.Dockerfile
docs/: developer-quickstart.md
references/: action-assurance-contract.md  agent-context-contract.md  articulation-grammar-contract.md  concept-language-contract.md  configuration-atlas-contract.md  constraint-graph-contract.md  cross-representation-contract.md  edit-evaluation-contract.md  evaluation-suite-contract.md  function-affordance-contract.md  graph-change-contract.md  grounded-question-contract.md  invariant-contract.md  motion-atlas-contract.md  project-preparation-contract.md  render-atlas-contract.md  ros-action-adapter-contract.md  ros-observation-adapter-contract.md  simulation-evidence-contract.md  simulator-adapter-contract.md  spatial-contract.md  temporal-observation-contract.md  world-scene-contract.md
schemas/: generic-trace.v1.schema.json  maniskill-entity-map.v2.schema.json  simulation-run.v1.schema.json  task-spec.v1.schema.json
scripts/: crosscheck_action_assurance.py  crosscheck_articulation_grammar.py  crosscheck_concept_graph.py  crosscheck_configuration_atlas.py  crosscheck_constraint_graph.py  crosscheck_cross_representation.py  crosscheck_fcl.py  crosscheck_functional_model.py  crosscheck_gravity_loads.py  crosscheck_mass_properties.py  crosscheck_motion_atlas.py  crosscheck_render_atlas.py  crosscheck_ros_action_adapter.py  crosscheck_ros_observation_adapter.py  crosscheck_temporal_observation.py  crosscheck_trimesh.py  crosscheck_world_scene.py  crosscheck_yourdfpy.py  mesh_geometry.py  robot_spatial.py  ros_action_adapter.py  ros_observation_adapter.py  ros_workspace.py  spatial_action_assurance.py  spatial_articulation.py  spatial_concepts.py  (+17 more)
(+96 files in other folders)
